# autoseachlib

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: demo.ipynb  demo_results.ipynb
src/autoseachlib/: __init__.py  cli.py  core.py  dataset.py  s3.py
tests/: test_cli.py  test_core.py  test_dataset.py  test_s3.py
