[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoseachlib"
version = "0.1.0"
description = "Automated research library for optimizing damage detection models at CarScan.ai"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CarScan.ai Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boto3>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
autoseachlib = "autoseachlib.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "moto[s3]",
]

[project.urls]
Homepage = "https://github.com/carscan/autoseachlib"
Repository = "https://github.com/carscan/autoseachlib"
Issues = "https://github.com/carscan/autoseachlib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
